--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
     "react-toastify": "^10.0.5",
+    "react-virtuoso": "^4.7.8",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
