--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.6.8",
+    "color-name-list": "^10.22.0",
     "framer-motion": "^11.1.5",
     "js-cookie": "^3.0.5",
     "loadenv": "^2.2.0",
