--- a/client/package.json
+++ b/client/package.json
@@ -18,10 +18,12 @@
     "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
     "color-name-list": "^10.22.0",
     "framer-motion": "^11.1.5",
     "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
     "loadenv": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
