--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,15 @@ services:
   api:
     build: ./Server
     ports:
-      - "3000:3001"
+      - "3000:3000"
     volumes:
       - ./Server/private.key:/keys/private.key
       - ./Server/public.key:/keys/public.key
+    env_file:
+      - ./Server/.env
   web:
     build: ./client
     ports:
       - "5173:5173"
-
+    env_file:
+      - ./client/.env
